--- a/appz.yml
+++ b/appz.yml
@@ -33,9 +33,9 @@ properties:
     GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: 
       vault: GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
     GF_AUTH_GENERIC_OAUTH_SCOPES: openid profile email  
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://appz.1276c99e.lowtouch.cloud/openid/authorize 
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://appz.1276c99e.lowtouch.cloud/openid/token 
-    GF_AUTH_GENERIC_OAUTH_API_URL: https://appz.1276c99e.lowtouch.cloud/openid/userinfo 
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://appz-harik.lowtouchcloud.io/openid/authorize 
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://appz-harik.lowtouchcloud.io/openid/token 
+    GF_AUTH_GENERIC_OAUTH_API_URL: https://appz-harik.lowtouchcloud.io/openid/userinfo 
     GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: anyname
     GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(roles[*], 'admin') && 'Admin' || 'Viewer'
     GF_SERVER_ROOT_URL: https://hari2833374ecloud-dev-grafana-7-0.1276c99e.lowtouch.cloud/
