--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: grafana
     code: Grafana
-    notify: hkrishnan@ecloudcontrol.com
+    notify: rniranjan@ecloudcontrol.com
     
 build:
     version: 7.0
@@ -11,7 +11,7 @@ build:
     image_template: grafana-7.0
     
 deploy:
-    context: Hari2833374ecloud/DEV
+    context: niranjan-ragi/DEV
     type: statefulset
     replicas: 1
     port:
@@ -33,10 +33,10 @@ properties:
     GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: 
       vault: GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
     GF_AUTH_GENERIC_OAUTH_SCOPES: openid profile email  
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://appz-harik.lowtouchcloud.io/openid/authorize 
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://appz-harik.lowtouchcloud.io/openid/token 
-    GF_AUTH_GENERIC_OAUTH_API_URL: https://appz-harik.lowtouchcloud.io/openid/userinfo 
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://appz-niranjan.lowtouchcloud.io/openid/authorize 
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://appz-niranjan.lowtouchcloud.io/openid/token 
+    GF_AUTH_GENERIC_OAUTH_API_URL: https://appz-niranjan.lowtouchcloud.io/openid/userinfo 
     GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: anyname
     GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(roles[*], 'admin') && 'Admin' || 'Viewer'
-    GF_SERVER_ROOT_URL: https://hari2833374ecloud-dev-grafana-7-0.lowtouchcloud.io
+    GF_SERVER_ROOT_URL: https://niranjan-ragi-dev-grafana-7-0.lowtouchcloud.io
     revision: 02
